# neuroscript

./: .gitignore  CLAUDE.md  Dockerfile  README.md  block-candidates.md  example_architecture.yaml  model.py  neuroscript-proposal.spec.md  neuroscript-v3.spec.md  neuroscript.spec.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
blocks/dropout/: block.yaml  module.py  test.py
blocks/embedding/: block.yaml  module.py  test.py
blocks/layernorm/: block.yaml  module.py  test.py
blocks/linear/: block.yaml  module.py  test.py
specs/: 00-research.md  01-blueprint.md  02-requirements.md  03-design.md  04-tasks.md  05-validation.md  README.md
src/blocks/: apoptotic_model.mmd  tiny_recursive_mamba.mmd
src/cli/: main.py
src/core/: __init__.py  block_interface.py  block_registry.py  capability_parser.py  compilation_engine.py  constraint_solver.py  container_runtime.py  direct_runtime.py  graph_loader.py  graph_validator.py  hardware_detector.py  monitoring.py  shape_validator.py
src/tools/: parser.py
test/cli/: test_cli.py
test/core/: __init__.py  test_block_interface.py  test_block_registry.py  test_capability_parser.py  test_compilation_engine.py  test_constraint_solver.py  test_container_runtime.py  test_graph_loader.py  test_graph_validator.py  test_hardware_detector.py  test_monitoring.py  test_shape_validator.py
test/tools/: test_parser.py
